<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WAP Madrid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="contrasena2">Repita la contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="registrate">¿Aun no tienes usuario?\n ¡Registrate!</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="mujer">Mujer</string>
    <string name="hombre">Hombre</string>
    <string name="conCuenta">¿Ya tienes cuenta? Pulsa aquí</string>
    <string name="enviar">Enviar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_home_fragment">HomeFragment</string>
    <string name="title_activity_registro">RegistroActivity</string>
    <string name="title_activity_map_fragment">MapaFragment</string>
    <string name="title_activity_rutas_fragment">RutasFragment</string>
    <string name="title_activity_rutasList_fragment">RutasListFragment</string>
    <string name="title_activity_centro_medico_fragment">CentroMedicoFragment</string>
    <string name="title_activity_crear_ruta">Crear Ruta</string>
    <string name="title_activity_ceder_capitania">Ceder Capitania</string>
    <string name="title_activity_comenzar_ruta">Comenzar Ruta</string>
    <string name="title_activity_mensajes_capitan">Mensajes</string>
    <string name="drawer_open">Abrir</string>
    <string name="drawer_close">Cerrar</string>
    <string name="terminarRuta">Terminar Ruta</string>

    <string-array name="drawer_options">
        <item>Inicio</item>
        <item>Rutas</item>
        <item>Centro Medico</item>
        <item>Perfil</item>
        <item>Amigos</item>
        <item>Grupos</item>
        <item>Capitán</item>
        <item>Enlaces</item>
    </string-array>
    <string-array name="grupo_tabs">
        <item>Características</item>
        <item>Miembros</item>
        <item>Fotos</item>
        <item>Notas</item>
    </string-array>
    <string-array name="rutasListTab">
        <item>Mapa</item>
        <item>Lista</item>
    </string-array>
    <string-array name="ruta_tabs">
        <item>Descripción</item>
        <item>Mapa</item>
    </string-array>
    <string-array name="amigo_tabs">
        <item>Información</item>
        <item>Actividad</item>
    </string-array>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_edit_profile">Editar Perfil</string>
    <string name="title_activity_gupo">GupoActivity</string>

</resources>
