<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etRegistroNombre"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/nombre"
            android:inputType="text"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etRegistroApellidos"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegistroNombre"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etRegistroFechaNacimiento"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegistroApellidos"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/fechaNacimiento"
            android:inputType="date"
            android:padding="20dp"/>
        
        
        <RadioGroup
            android:id="@+id/rgGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/etRegistroFechaNacimiento"
            android:orientation="horizontal" >
            
            <RadioButton
                android:id="@+id/rdMujer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mujer"
                android:textSize="20sp" />

            <RadioButton
	            android:id="@+id/rdHombre"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/hombre"
	            android:textSize="20sp" />

        </RadioGroup>

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rgGenero"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/usuario"
            android:inputType="textPersonName"
            android:padding="20dp" />

        <EditText
            android:id="@+id/etRegistroContrasena"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etUsuario"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:padding="20dp" />
        
        <EditText
            android:id="@+id/etRegistroContrasena2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etRegistroContrasena"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/contrasena2"
            android:inputType="textPassword"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnEnviarEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etRegistroContrasena2"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dip"
            android:layout_marginTop="22dp"
            android:padding="10dp" 
            android:text="@string/enviar" />
        
        <TextView
            android:id="@+id/gotoInicio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnEnviarEstado"
            android:layout_margin="25dip"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/conCuenta"
            android:textSize="20sp" />
        
        <ProgressBar
            android:id="@+id/pgRegistro"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/rgGenero"
            android:layout_alignTop="@+id/btnEnviarEstado"
            android:layout_marginRight="38dp" />   

    </RelativeLayout>

</ScrollView>
