<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@color/black"
    tools:context="com.wapmadrid.activities.MainActivity" >

    <ImageView
	        android:id="@+id/imSup"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="10dp"
	        android:src="@drawable/logo_wap_naranja" />
    
	    <EditText
	        android:id="@+id/editContrasena"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/editUsuario"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="36dp"
	        android:ems="10"
	        android:inputType="textPassword" 
	        android:textColor="@color/orange"
	        android:textColorHint="@color/orange"
	        android:textCursorDrawable="@null"
	        android:hint="@string/contrasena" />

	    <Button
	        android:id="@+id/buttonEntrar"
	        android:layout_width="match_parent"
	        android:layout_height="40dp"
	        android:layout_below="@+id/editContrasena"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:layout_marginBottom="30dp"
	        android:background="@drawable/button_enter"
	        android:text="@string/entrar" />

	    <TextView
	        android:id="@+id/textRegistrate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/buttonEntrar"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="30dp"
	        android:text="@string/registrate"
	        android:textColor="@color/orange"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <EditText
	        android:id="@+id/editUsuario"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/imSup"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="40dp"
	        android:ems="10"
	        android:inputType="textPersonName"
	        android:textColor="@color/orange"
	        android:textColorHint="@color/orange"
	        android:textCursorDrawable="@null"
        	android:hint="@string/usuario" >
			
	        <requestFocus />
	    </EditText>

	    

</RelativeLayout>
